--- a/.gitignore
+++ b/.gitignore
@@ -338,3 +338,6 @@ ASALocalRun/
 
 # BeatPulse healthcheck temp database
 healthchecksdb
+/_Data/ENG My dictionaries/043.L2Dict
+/LLA.Util/418-2 (v2).txt
+/LLA.Util/418-2 (v1).txt
